--- a/vis3/vis3.html
+++ b/vis3/vis3.html
@@ -3,12 +3,12 @@
 <head>
   <title>Final Project</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></link>
-  <link rel="stylesheet" type="text/css" href="final_project.css"></link>
+  <link rel="stylesheet" type="text/css" href="vis3.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!--Put your D3 import statement between these two lines-->
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="d3-legend.js"></script>
+  <script src="../d3-legend.js"></script>
   <!--Put your D3 import statement between these two lines-->
 </head>
 
@@ -19,9 +19,11 @@
       </div>
 
       <div class="col-xs-8" style="margin: 0 auto">
+        <h3>Number of Posts Above / Below Karma Threshold</h3>
         <div id="vis-3"></div>
         <div class="slidecontainer">
-          <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+          <h5 id="karma_threshold">Karma Threshold: 25</h5>
+          <input type="range" min="0" max="50" value="25" class="slider" id="myRange">
         </div>
       </div>
 
@@ -38,7 +40,7 @@
     // https://bl.ocks.org/mbostock/3886208
 
     // Setting up the graph dimensions and margins
-    var margin = {top: 30, right: 30, bottom: 60, left: 60};
+    var margin = {top: 30, right: 30, bottom: 80, left: 60};
     var width = 600 - margin.left - margin.right;
     var height = 400 - margin.top - margin.bottom;
 
@@ -50,7 +52,7 @@
     var x_axis = d3.axisBottom(x);
     var y_axis = d3.axisLeft(y);
 
-    d3.csv('./data/temp.csv', function(error, data) {
+    d3.csv('./data/25.csv', function(error, data) {
 
       var above_below = data.columns.slice(1, 3);
 
@@ -76,7 +78,7 @@
          .enter().append('rect')
            .attr('x', function(d) { return x(d.data.subreddit); })
            .attr('y', function(d) { return y(d[1]); })
-           .attr('height', function(d) { return (y(d[0]) - y(d[1])); })
+           .attr('height', function(d) { return (y((d[0])) - y(d[1])); })
            .attr('width', x.bandwidth());
 
       svg.append('g')
@@ -88,12 +90,46 @@
                 .attr('class', 'y-axis')
                 .call(y_axis);
 
+      svg.append('text')
+                .attr('class', 'label')
+                .text('Subreddit')
+                .attr('x', (width/2))
+                .attr('y', height + 50)
+                .style('fill', '#090');
+
+      svg.append('text')
+                .attr('class', 'label')
+                .text('Number of Posts')
+                .attr('transform', 'rotate(-90)')
+                .attr('x', -(height/2))
+                .attr('y', -50)
+                .style('fill', '#090');
+
+      var ordinal = d3.scaleOrdinal()
+                                .domain(['Above', 'Below'])
+                                .range(['#00C', '#C00']);
+
+      svg.append('g')
+                .attr('class', 'legendOrdinal')
+                .attr('transform', 'translate(20,7)');
+
+      var legendOrdinal = d3.legendColor()
+                              .shape('path', d3.symbol().type(d3.symbolSquare).size(150)())
+                              .shapePadding(5)
+                              .labelOffset(25)
+                              .labelAlign("start")
+                              .scale(ordinal);
+
+      svg.select('.legendOrdinal')
+                .call(legendOrdinal);
+
     });
 
     function change_threshold(threshold) {
 
-      // TODO: Change this line to access the pre-processed file based on each threshold value
-      var file = './data/temp2.csv';
+      $('#karma_threshold').html('Karma Threshold: ' + threshold);
+
+      var file = './data/' + threshold + '.csv';
 
       d3.csv(file, function(error, data) {
 
