Made some changes to vis2 and vis3.

--- a/vis3/vis3.html
+++ b/vis3/vis3.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="col-xs-8" style="margin: 0 auto">
-        <h3>Number of Posts Above / Below Karma Threshold</h3>
+        <h3 style="text-align: center">Number of Posts Above / Below Karma Threshold</h3>
         <div id="vis-3"></div>
         <div class="slidecontainer">
           <h5 id="karma_threshold">Karma Threshold: 25</h5>
@@ -41,7 +41,7 @@
 
     // Setting up the graph dimensions and margins
     var margin = {top: 30, right: 30, bottom: 80, left: 60};
-    var width = 600 - margin.left - margin.right;
+    var width = 750 - margin.left - margin.right;
     var height = 400 - margin.top - margin.bottom;
 
     // Setting the ranges
