fixed bug for index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="col-xs-4">
-            <a href="/vis2/vis2_new.html">
+            <a href="/vis2/vis2.html">
                 <img src="/vis2/vis2.png" style="width:300px;height:300px;border:50px">
             </a>
         </div>
