--- a/vis2/vis2.html
+++ b/vis2/vis2.html
@@ -18,8 +18,8 @@
       </div>
 
       <div class="col-xs-8" style="margin: 0 auto">
-        <h4 style="text-align: center">Mean Karma (Normalized by Number of Users) Over Time</h3>
-        <div><strong style="font-size: 14px">Select Subreddit</strong></div>
+        <h5 style="text-align: center">Mean Karma (Normalized by Number of Users) Over Time</h5>
+        <div><div style="font-size: 14px">Select Subreddit</div></div>
         <select id="subreddit-select" class="form-control">
           <option value="academia">Ask Academia</option>
           <option value="anthropology">Ask Anthropology</option>
@@ -30,8 +30,8 @@
           <option value="socialscience">Ask Social Science</option>
           <option value="women">Ask Women</option>
         </select>
-        <div><strong style="font-size: 14px">Select Time Frame</strong></div>
-        <select id="selection" class="form-control">
+        <div><div style="font-size: 14px">Select Time Frame</div></div>
+        <select id="selection" class="form-control" style="margin-bottom: 25px">
           <option value ="Week" selected>Entire Week</option>
           <option value=0>Monday</option>
           <option value=1>Tuesday</option>
@@ -41,7 +41,7 @@
           <option value=5>Saturday</option>
           <option value=6>Sunday</option>
         </select>
-        <div id="vis-2"></div>
+        <div id="vis-2" style="margin-top: -20px"></div>
       </div>
 
       <div class="col-xs-2"></div>
