--- a/vis3/vis3.html
+++ b/vis3/vis3.html
@@ -19,11 +19,11 @@
       </div>
 
       <div class="col-xs-8" style="margin: 0 auto">
-        <h3 style="text-align: center">Number of Posts Above / Below Karma Threshold</h3>
+        <h5 style="text-align: center; margin-top: 10px">Number of Posts Above / Below Karma Threshold</h5>
         <div id="vis-3"></div>
         <div class="slidecontainer">
-          <h5 id="karma_threshold">Karma Threshold: 25</h5>
-          <input type="range" min="0" max="50" value="25" class="slider" id="myRange">
+          <h6 id="karma_threshold">Karma Threshold: 0</h6>
+          <input type="range" min="0" max="50" value="0" class="slider" id="myRange">
         </div>
       </div>
 
@@ -40,9 +40,9 @@
     // https://bl.ocks.org/mbostock/3886208
 
     // Setting up the graph dimensions and margins
-    var margin = {top: 30, right: 30, bottom: 80, left: 60};
-    var width = 750 - margin.left - margin.right;
-    var height = 400 - margin.top - margin.bottom;
+    var margin = {top: 10, right: 30, bottom: 50, left: 60};
+    var width = 700 - margin.left - margin.right;
+    var height = 250 - margin.top - margin.bottom;
 
     // Setting the ranges
     var x = d3.scaleBand().rangeRound([0, width]).paddingInner([0.5]).paddingOuter([0.2]).align([0.5]);
@@ -52,7 +52,7 @@
     var x_axis = d3.axisBottom(x);
     var y_axis = d3.axisLeft(y);
 
-    d3.csv('./data/25.csv', function(error, data) {
+    d3.csv('./data/0.csv', function(error, data) {
 
       var above_below = data.columns.slice(1, 3);
 
@@ -94,7 +94,7 @@
                 .attr('class', 'label')
                 .text('Subreddit')
                 .attr('x', (width/2))
-                .attr('y', height + 50)
+                .attr('y', height + 35)
                 .style('fill', '#090');
 
       svg.append('text')
@@ -102,7 +102,7 @@
                 .text('Number of Posts')
                 .attr('transform', 'rotate(-90)')
                 .attr('x', -(height/2))
-                .attr('y', -50)
+                .attr('y', -45)
                 .style('fill', '#090');
 
       var ordinal = d3.scaleOrdinal()
