Changed dashbaord to be the main page.

--- a/index.html
+++ b/index.html
@@ -1,44 +1,20 @@
 <html>
 
 <head>
-    <title>Final Project</title>
-    <link rel="stylesheet" type="text/css"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></link>
-    <link rel="stylesheet" type="text/css" href="vis3.css"></link>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <title>Final Project</title>
+  <link rel="stylesheet" type="text/css"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></link>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-2"></div>
-
-        <div class="col-xs-8" style="margin: 0 auto">
-            <h1>Please click on one of the static images below to start exploring the reddit data.</h1>
-        </div>
-
-        <div class="col-xs-2"></div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-4">
-            <a href="/vis1/vis1.html">
-                <img src="/vis1/vis1.png" style="width:300px;height:300px;border:50px">
-            </a>
-        </div>
-        <div class="col-xs-4">
-            <a href="/vis2/vis2.html">
-                <img src="/vis2/vis2.png" style="width:300px;height:300px;border:50px">
-            </a>
-        </div>
-        <div class="col-xs-4">
-            <a href="/vis3/vis3.html">
-                <img src="/vis3/vis3.png" style="width:300px;height:300px;border:50px">
-            </a>
-        </div>
-    </div>
-
-</div>
+  <h2 style="text-align: center; margin-top: 10px">WHAT MAKES A GOOD REDDIT POST?</h2>
+  <hr>
+  <iframe style="border: none; margin-top: 10px; margin-bottom: -10px" src="vis1/vis1.html" height="800" width="1250"></iframe>
+  <hr>
+  <iframe style="border: none; margin-top: -10px" src="vis3/vis3.html" height="380" width="1250"></iframe>
+  <hr>
+  <iframe style="border: none" src="vis2/vis2.html" height="800" width="1250"></iframe>
 </body>
 
 </html>
