--- a/vis2/vis2.html
+++ b/vis2/vis2.html
@@ -24,7 +24,7 @@
           <option value="academia">Ask Academia</option>
           <option value="anthropology">Ask Anthropology</option>
           <option value="culinary">Ask Culinary</option>
-          <option value="historians">Ask Historians</option>
+          <option value="historians" selected>Ask Historians</option>
           <option value="men">Ask Men</option>
           <option value="science">Ask Science</option>
           <option value="socialscience">Ask Social Science</option>
@@ -55,8 +55,8 @@
         width = 600 - margin.left - margin.right,
         height = 270 - margin.top - margin.bottom;
 
-    var file_day = './data/reqd_academia_day.csv';
-    var file_hour = './data/reqd_academia_hr.csv';
+    var file_day = './data/reqd_historians_day.csv';
+    var file_hour = './data/reqd_historians_hr.csv';
         
     // Create dictionaries for days
     var days =['Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday'];
