fixed bug for AskMen

--- a/vis2/vis2.html
+++ b/vis2/vis2.html
@@ -246,7 +246,7 @@
           break;
         case 'men':
           file_day = './data/reqd_men_day.csv';
-          file_hour = './data/reqd_men_hour.csv';
+          file_hour = './data/reqd_men_hr.csv';
           break;
         case 'science':
           file_day = './data/reqd_science_day.csv';
